// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs should render 1`] = `
<nav
  aria-label="breadcrumb"
  className=""
>
  <ol
    className="breadcrumb"
  >
    <li
      aria-current={undefined}
      className="breadcrumb-item"
    >
      <a
        href="/public/apps/dashboard"
      >
        Home
      </a>
    </li>
    <li
      aria-current="page"
      className="active breadcrumb-item"
    >
      …
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs should render child as current page 1`] = `
<nav
  aria-label="breadcrumb"
  className=""
>
  <ol
    className="breadcrumb"
  >
    <li
      aria-current={undefined}
      className="breadcrumb-item"
    >
      <a
        href="/public/apps/dashboard"
      >
        Home
      </a>
    </li>
    <li
      aria-current="page"
      className="active breadcrumb-item"
    >
      Payer Space
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs should render crumbs 1`] = `
<nav
  aria-label="breadcrumb"
  className=""
>
  <ol
    className="breadcrumb"
  >
    <li
      aria-current={undefined}
      className="breadcrumb-item"
    >
      <a
        href="/public/apps/dashboard"
      >
        Home
      </a>
    </li>
    <li
      aria-current={undefined}
      className="breadcrumb-item"
    >
      <a
        href="/parent-page"
      >
        my grand parent page
      </a>
    </li>
    <li
      aria-current={undefined}
      className="breadcrumb-item"
    >
      <a
        href="/grand-parent-page"
      >
        my parent page
      </a>
    </li>
    <li
      aria-current="page"
      className="active breadcrumb-item"
    >
      Payer Space
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs should render crumbs with missing values 1`] = `
<nav
  aria-label="breadcrumb"
  className=""
>
  <ol
    className="breadcrumb"
  >
    <li
      aria-current={undefined}
      className="breadcrumb-item"
    >
      <a
        href="/public/apps/dashboard"
      >
        Home
      </a>
    </li>
    <li
      aria-current={undefined}
      className="breadcrumb-item"
    >
      <a
        href="/parent-page"
      >
        my grand parent page
      </a>
    </li>
    <li
      aria-current={undefined}
      className="breadcrumb-item"
    >
      <span>
        …
      </span>
    </li>
    <li
      aria-current="page"
      className="active breadcrumb-item"
    >
      Payer Space
    </li>
  </ol>
</nav>
`;

exports[`Breadcrumbs should render custom ellipse 1`] = `
<nav
  aria-label="breadcrumb"
  className=""
>
  <ol
    className="breadcrumb"
  >
    <li
      aria-current={undefined}
      className="breadcrumb-item"
    >
      <a
        href="/public/apps/dashboard"
      >
        Home
      </a>
    </li>
    <li
      aria-current={undefined}
      className="breadcrumb-item"
    >
      <span>
        ???
      </span>
    </li>
    <li
      aria-current="page"
      className="active breadcrumb-item"
    >
      Payer Space
    </li>
  </ol>
</nav>
`;
